--- a/Introdução a criação de websites com HTML5 e CSS3/style.css
+++ b/Introdução a criação de websites com HTML5 e CSS3/style.css
@@ -1,5 +1,9 @@
 body {
     background: rgb(228, 226, 226);
+    font-family: Verdana;
+    max-width: 900px;
+    margin: auto;
+    font-trans
 }
 
 .post_image_topo {
@@ -13,6 +17,17 @@ body {
     color: rgb(0, 0, 2);
 }
 
+#title {
+    font-size: 40 px;
+    text-transform: uppercase;
+}
+
+a {
+    text-decoration: line-through;
+    color: #505050;
+
+}
+
 .post_title {
     font-size: 16px;
     font-style: italic;
@@ -22,7 +37,7 @@ body {
 
 .post {
     background: #eff;
-    padding: 15px;
+    padding: 15pxm;
     border: 3px solid rgb(34, 90, 107);
     margin-bottom: 15px;
     border-radius: 15px;
@@ -31,8 +46,19 @@ body {
 .post_content {
     margin: 0;
     margin-bottom: 15px;
+    text-transform:  capitalize;
+    text-align: justify;
 }
 
 .post_image {
     margin-bottom: 15px;
+}
+
+.contacts_list {
+    list-style-type: none;
+    padding-left: 1px;
+}
+
+.contacts_list li a {
+    text-decoration: none;
 }
